src/test/ui/async-await/async-fn-multiple-lifetimes.stderr
error: ambiguous lifetime bound in `async fn`
  --> $DIR/async-fn-multiple-lifetimes.rs:7:65
   |
LL | async fn multiple_named_lifetimes<'a, 'b>(_: &'a u8, _: &'b u8) {}
   |                                                                 ^ neither `'a` nor `'b` outlives the other
   |
   = note: multiple unrelated lifetimes are not allowed in `async fn`.
   = note: if you're using argument-position elided lifetimes, consider switching to a single named lifetime.

error: ambiguous lifetime bound in `async fn`
  --> $DIR/async-fn-multiple-lifetimes.rs:16:52
   |
LL | async fn multiple_elided_lifetimes(_: &u8, _: &u8) {}
   |                                                    ^ the elided lifetimes here do not outlive one another
   |
   = note: multiple unrelated lifetimes are not allowed in `async fn`.
   = note: if you're using argument-position elided lifetimes, consider switching to a single named lifetime.

error: aborting due to 2 previous errors

